p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "app1.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app-one-service
                port:
                  number: 8080
    - host: "app2.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app-two-service
                port:
                  number: 8080
    - host: "app3.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app-three-service
                port:
                  number: 8080
